--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Projet AR Interactif</title>
       <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-      <script src="src/ar-utils.js"></script> 
+      <script src="src/ar-utils.js"></script>
+      <script src="src/popup-manager.js"></script>
       <script src="src/effectif_etudiant.js"></script> 
+      <link rel="stylesheet" href="src/popup-styles.css" />
   </head>
  <body>
   <a-scene 
@@ -69,7 +71,17 @@
       width="0.2" height="0.39" 
       rotation="0 0 0" 
     ></a-plane>
-    
+    <a-plane 
+      id="camembert-zone"
+      class="clickable" 
+      camembert-clickable
+      color="green" 
+      opacity="0.0" 
+      position="0.18 -0.35 0.006" 
+      width="0.35" 
+      height="0.35" 
+      rotation="0 0 0" 
+    ></a-plane>
   </a-entity>
 </a-scene>
 </body>
